Closed Bug 741701 Opened 12 years ago Closed 12 years ago

CAccessibleHyperlink::get_anchor shouldn't use nsIWinAccessNode

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: surkov, Assigned: capella)

References

Details

(Whiteboard: [good first bug][mentor=trev.saunders@gmail.com][lang=c++])

Attachments

(1 file)

1) do nsAccessibleWrap* anchor = static_cast<nsAccessibleWrap*>(thisObj->AnchorAt(aIndex));
2) replace winAccessNode->QueryNativeInterface call to anchor->QueryInterface
Assignee: nobody → markcapella
Status: NEW → ASSIGNED
Attached patch Patch (v1)Splinter Review
Quick patch ...
Attachment #613191 - Flags: feedback?(trev.saunders)
Comment on attachment 613191 [details] [diff] [review]
Patch (v1)

> 
> #include "nsAccessible.h"
>+#include "nsAccessibleWrap.h"

nsAccessibleWrap.h needs to include nsAccessible.h so you could stop including nsAccessible.h directly, but no big deal either way.

otherwise this looks fine, but this is untested code that can be tricky so asking surkov to take a look too.
Attachment #613191 - Flags: feedback?(trev.saunders) → review+
Comment on attachment 613191 [details] [diff] [review]
Patch (v1)

Review of attachment 613191 [details] [diff] [review]:
-----------------------------------------------------------------

i'll fix those before landing

::: accessible/src/msaa/CAccessibleHyperlink.cpp
@@ +83,5 @@
>    if (aIndex < 0 || aIndex >= static_cast<long>(thisObj->AnchorCount()))
>      return E_INVALIDARG;
>  
> +  nsAccessibleWrap* anchor = static_cast<nsAccessibleWrap*>
> +                             (thisObj->AnchorAt(aIndex));

wrong indentation
Attachment #613191 - Flags: feedback+
https://hg.mozilla.org/mozilla-central/rev/db8d17856c4e
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: