Bug 741701 - CAccessibleHyperlink::get_anchor shouldn't use nsIWinAccessNode, r=tbsaunde, f=surkov